fix(swagger): fixing request and response model
